--- a/config/resumes.properties
+++ b/config/resumes.properties
@@ -1,4 +1,4 @@
 storage.dir=data/storage
 db.url=jdbc:postgresql://localhost:5432/resumes
 db.user=postgres
-db.password=12341234
+db.password=postgres
